; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-write.c_change_identity.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-write.c_change_identity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*)* @change_identity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @change_identity(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca [16 x i8], align 16
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = call i32 @pdf_array_len(i32* %8, i32* %9)
  %11 = icmp sge i32 %10, 2
  br i1 %11, label %12, label %22

12:                                               ; preds = %3
  %13 = load i32*, i32** %4, align 8
  %14 = getelementptr inbounds [16 x i8], [16 x i8]* %7, i64 0, i64 0
  %15 = call i32 @fz_memrnd(i32* %13, i8* %14, i32 16)
  %16 = load i32*, i32** %4, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = getelementptr inbounds [16 x i8], [16 x i8]* %7, i64 0, i64 0
  %20 = call i32 @pdf_new_string(i32* %18, i8* %19, i32 16)
  %21 = call i32 @pdf_array_put_drop(i32* %16, i32* %17, i32 1, i32 %20)
  br label %22

22:                                               ; preds = %12, %3
  ret void
}

declare dso_local i32 @pdf_array_len(i32*, i32*) #1

declare dso_local i32 @fz_memrnd(i32*, i8*, i32) #1

declare dso_local i32 @pdf_array_put_drop(i32*, i32*, i32, i32) #1

declare dso_local i32 @pdf_new_string(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
